fix: margin on mobile in Logo Title

--- a/PulseTemple.Web/wwwroot/css/site.css
+++ b/PulseTemple.Web/wwwroot/css/site.css
@@ -433,6 +433,8 @@ footer {
     @media (width <= 768px) {
         flex-direction: column-reverse;
         gap: 3rem;
+        padding:1rem;
+        margin: 0 0.5rem;
     }
 }
 
